fix prefix align

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -1666,7 +1666,7 @@ textarea {
         text-align: center;
     }
     .content {
-        min-height: 640px;
+        min-height: 664px;
         align-items: flex-start;
         .content-title {
             font-size: 21px;
